Start not visible in portrait screen Fixes #7

--- a/root/2d/style/portrait.css
+++ b/root/2d/style/portrait.css
@@ -6,8 +6,8 @@
         width: 95vw;
         position: absolute;
         left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+        top: 0;
+        transform: translateX(-50%);
         overflow: scroll;
         text-align: center;
     }
